--- a/jjbnmvbn.ipynb
+++ b/jjbnmvbn.ipynb
@@ -1119,7 +1119,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 104,
+   "outputs": [],
+   "source": [
+    "## datasets\n",
+    "## https://www.kaggle.com/datasets/arshkon/linkedin-job-postings?resource=download\n",
+    "## https://www.kaggle.com/datasets/jillanisofttech/updated-resume-dataset"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-01-02T15:36:47.837369Z",
+     "end_time": "2024-01-02T15:36:47.844376Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1127,8 +1144,8 @@
     "id": "CFdAUA7m-zgS",
     "outputId": "5bef1867-a1dd-4750-8f0f-b121efe37a5b",
     "ExecuteTime": {
-     "start_time": "2023-12-31T17:27:50.564495Z",
-     "end_time": "2023-12-31T17:27:50.571009Z"
+     "start_time": "2024-01-02T14:10:39.171524Z",
+     "end_time": "2024-01-02T14:10:39.686933Z"
     }
    },
    "outputs": [
@@ -1153,7 +1170,7 @@
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 69,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1166,6 +1183,7 @@
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "import pandas as pd\n",
+    "from tqdm import tqdm\n",
     "\n",
     "# Download NLTK resources (if not already downloaded)\n",
     "nltk.download('punkt')\n",
@@ -1335,49 +1353,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "                       title  \\\n0            cloud architect   \n1             azure engineer   \n2    infrastructure engineer   \n3           python developer   \n4           dotnet developer   \n..                       ...   \n464    entry agent work home   \n465        block tax advisor   \n466        package part time   \n467          pcu stepdown rn   \n468             welder plate   \n\n                                           description  similarity  \n0    overview nformation security security security...    0.389613  \n1    interwell health kidney care management compan...    0.376700  \n2    grayson search cybersecurity infrastructure fi...    0.325275  \n3    ecs python developer customer work memphis tn ...    0.320881  \n4    hi ranjith advent position developer client cl...    0.305967  \n..                                                 ...         ...  \n464  fill entry position entry level role work pdf ...    0.000000  \n465  bring team year round client relationshipsprov...    0.000000  \n466  job ground part warehouse transportation secto...    0.000000  \n467  impact place fusion staffing goal everyone tou...    0.000000  \n468  job title plate welder job category department...    0.000000  \n\n[469 rows x 3 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>title</th>\n      <th>description</th>\n      <th>similarity</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>cloud architect</td>\n      <td>overview nformation security security security...</td>\n      <td>0.389613</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>azure engineer</td>\n      <td>interwell health kidney care management compan...</td>\n      <td>0.376700</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>infrastructure engineer</td>\n      <td>grayson search cybersecurity infrastructure fi...</td>\n      <td>0.325275</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>python developer</td>\n      <td>ecs python developer customer work memphis tn ...</td>\n      <td>0.320881</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>dotnet developer</td>\n      <td>hi ranjith advent position developer client cl...</td>\n      <td>0.305967</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>464</th>\n      <td>entry agent work home</td>\n      <td>fill entry position entry level role work pdf ...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>465</th>\n      <td>block tax advisor</td>\n      <td>bring team year round client relationshipsprov...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>466</th>\n      <td>package part time</td>\n      <td>job ground part warehouse transportation secto...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>467</th>\n      <td>pcu stepdown rn</td>\n      <td>impact place fusion staffing goal everyone tou...</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>468</th>\n      <td>welder plate</td>\n      <td>job title plate welder job category department...</td>\n      <td>0.000000</td>\n    </tr>\n  </tbody>\n</table>\n<p>469 rows × 3 columns</p>\n</div>"
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 84,
+   "outputs": [],
    "source": [
-    "# the question we want to make\n",
-    "\n",
-    "test_sentence = \"\"\"About me\n",
-    "Cloud Expert | Developer | DevOps | Cloud Architect Machine Learning | AI | LLM ★ AWS (Amazon Web\n",
-    "Services) 4X Certified ★ 11 Years of Experience across AWS, Azure and Google Cloud Platform ★\n",
-    "Designing, Automation and Deploying web applications at scale ★ Experience with Fortune... Read more\n",
-    "Skills\n",
-    "\n",
-    "DevOps\n",
-    "Docker\n",
-    "AWS\n",
-    "Google Cloud Platform\n",
-    "Microsoft Azure\n",
-    "Kubernetes\n",
-    "Python\n",
-    "Django\n",
-    "Software architecture\n",
-    "Infrastructure management\n",
-    "Linux\"\"\"\n",
-    "\n",
-    "result_df[\"similarity\"] = result_df.apply(lambda row: get_cosine_similarity(row['description'], tokenize_and_filter(test_sentence)), axis=1)\n",
-    "result_df = result_df.sort_values(by='similarity', ascending=False).reset_index(drop=True)\n",
-    "\n",
-    "result_df"
+    "def request_job(df, resume):\n",
+    "    df[\"similarity\"] = df.apply(lambda row: get_cosine_similarity(row['description'], tokenize_and_filter(resume)), axis=1)\n",
+    "    result = df.sort_values(by='similarity', ascending=False).reset_index(drop=True).head(5)\n",
+    "    return result"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-12-31T17:34:53.377238Z",
-     "end_time": "2023-12-31T17:34:56.025401Z"
+     "start_time": "2023-12-31T18:55:48.235779Z",
+     "end_time": "2023-12-31T18:55:48.244790Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "outputs": [],
+   "source": [
+    "resume_df = pd.read_csv(\"datasets/UpdatedResumeDataSet.csv\")\n",
+    "resume_df['Resume'] = resume_df['Resume'].apply(tokenize_and_filter)\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-01-02T14:10:49.820102Z",
+     "end_time": "2024-01-02T14:11:03.268162Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 962/962 [59:29<00:00,  3.71s/it]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "152\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "tqdm.pandas()\n",
+    "\n",
+    "resume_df['Match'] = resume_df.progress_apply(lambda row: row['Category'].lower() in request_job(result_df, row['Resume'])['title'].tolist(), axis=1)\n",
+    "count = resume_df['Match'].sum()\n",
+    "\n",
+    "print(count)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-01-02T14:16:06.766393Z",
+     "end_time": "2024-01-02T15:15:35.952185Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.32409381663113007\n"
+     ]
+    }
+   ],
+   "source": [
+    "percentage_found = count/result_df.shape[0]\n",
+    "print(percentage_found)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-01-02T15:20:54.014544Z",
+     "end_time": "2024-01-02T15:20:54.024031Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.32409381663113007"
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-01-02T15:18:52.613651Z",
+     "end_time": "2024-01-02T15:18:52.623547Z"
     }
    }
   },
